[package]
name = "passworder"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14"
image = "0.25"
rand = "0.10"
tokio = { version = "1", features = ["full"] }
tray-icon = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging"] }
